--- a/themes/hugo-sustain/layouts/partials/head.html
+++ b/themes/hugo-sustain/layouts/partials/head.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
   <head>
+    <base href="{{ .Site.BaseURL }}">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
